done vanilla now working on react

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Product Image -->
             <div class="md:w-1/2">
                 <img id="mainImage" src="images/purple.jpg" alt="Smart Watch"
-                    class="w-full rounded-lg shadow-lg h-[720px]">
+                    class="w-full rounded-[4px] shadow-lg h-[720px]">
             </div>
 
             <!-- Product Details -->
