--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="md:w-1/2  md:max-h-max p-4 md:p-0">
                 <h1 class="text-[40px] font-bold mb-4 text-dark-bold roboto-700">Classy Modern Smart watch</h1>
                 <div class="flex items-center mb-4">
-                    <div class="flex text-[#FFD200] text-18px">★★★⯪☆</div>
+                    <div class="flex text-[#FFD200] text-[18px]">★★★⯪☆</div>
                     <span class="text-gray-600 ml-2 roboto-400 text-light-gray">(7 Reviews)</span>
                 </div>
                 <div class="mb-6">
